<resources>
    <string name="app_name">Swim Master</string>
    <string name="swim_master">Swim\nMaster</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name:</string>
    <string name="email">e-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="remember">Password must contain at least 6 characters.</string>

    <string name="verify">Verify</string>
    <string name="not_verified">User is not verified.</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="signed_out">Signed out!</string>

    <!--Main menu Activity-->
    <string name="single_workout">Single Workout</string>
    <string name="training_plan">Training Plan</string>
    <string name="training_log">Training Log</string>
    <string name="times_log">Times Log</string>

    <string name="single_workout_description">Here you can customise your Single Workout.</string>
    <string name="training_plan_description">Here you can generate new Training Plan or check existing one.</string>
    <string name="training_log_description">Here you can see what trainings you have done.</string>
    <string name="times_log_description">Here you can check your times in particular strokes and add new.</string>

    <!--Profile Activity-->
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="age">Age:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="submit">Submit</string>
    <string name="edit">Edit</string>

    <!--TimesLogActivity Activity-->
    <string-array name="swimming_styles">
        <item> -- choose -- </item>
        <item> Butterfly </item>
        <item> Backstroke </item>
        <item> Breaststroke </item>
        <item> Freestyle </item>
        <item> Medley </item>
    </string-array>

    <string name="fr_abbrev">FR</string>.
    <string name="fl_abbrev">FL</string>
    <string name="bk_abbrev">BK</string>
    <string name="br_abbrev">BR</string>
    <string name="im_abbrev">IM</string>

    <string name="butterfly">Butterfly</string>.
    <string name="backstroke">Backstroke</string>
    <string name="breaststroke">Breaststroke</string>
    <string name="freestyle">Freestyle</string>
    <string name="medley">Medley</string>

    <string name="pool">Pool length: </string>
    <string name="short_pool">25 m</string>
    <string name="long_pool">50 m</string>
    <string name="choose_style">Choose a style: </string>
    <string name="choose_distance">Choose a distance: </string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="title_activity_times">Times</string>

    <string name="title_for_fragments">Here are your best times in: %1$s.</string>

    <!--Add Time Popup-->
    <string name="strokes">Style:</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="edit_time_hint">00:00:00</string>
    <string name="date">Date:</string>
    <string name="edit_date_hint">01/01/2019</string>

    <string-array name="distances">
        <item> -- choose -- </item>
        <item> 25 m </item>
        <item> 50 m </item>
        <item> 100 m </item>
        <item> 200 m </item>
        <item> 400 m </item>
        <item> 500 m </item>
        <item> 1000 m </item>
        <item> 1500 m </item>
    </string-array>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="SW_name">Name</string>

    <string name="anim">Anim</string>
    <string name="name_anim">Name Animation</string>
    <string name="date_anim">Date Animation</string>
    <string name="button_anim">Button Animation</string>

    <!--Single Workout Activity -->
    <string name="Warm_up">Warm-up:</string>
    <string name="Main_set">Main set:</string>
    <string name="Cooldown">Cooldown:</string>
    <string name="log">Log</string>

    <!--Single Workout Popup-->
    <string name="category">Category</string>
    <string-array name="category_array">
        <item> -- choose -- </item>
        <item> Warm-up </item>
        <item> Main set </item>
        <item> Cooldown </item>
    </string-array>

    <string name="repetitions">Repetitions:</string>
    <string name="repetitions_hint">0</string>

    <string name="type">Type:</string>
    <string-array name="type_array">
        <item> -- choose -- </item>
        <item> Swim </item>
        <item> Kick </item>
        <item> Pull </item>
    </string-array>

    <string name="pace">Peace:</string>

    <string-array name="pace_array">
        <item> -- choose -- </item>
        <item> Slow </item>
        <item> Moderate </item>
        <item> Fast </item>
        <item> Sprint </item>
    </string-array>

    <string name="rest">Rest:</string>
    <string name="rest_hint">0</string>

    <string name="additions">Additions:</string>
    <string name="legs">Legs only</string>
    <string name="arms">Arms only</string>
    <string name="kick_board">Kick board</string>
    <string name="pull_buoy">Pull buoy</string>
    <string name="paddles">Paddles</string>
    <string name="fins">Fins</string>

    <string name="add">Add</string>


    <!--Training Plan Activity-->
    <string name="generate">Generate</string>

    <!--Generate Training Popup-->
    <string name="days">Which days would you like to swim?</string>
    <string name="weeks">How many weeks would you like to train?</string>
    <string name="starting_distance">What is your starting distance?</string>
    <string name="strokes_question">Which strokes can you swim?</string>
</resources>

