<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_popup_background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/category"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/styles"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strokes" />

        <Spinner
            android:id="@+id/spinner_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="14">

        <TextView
            android:id="@+id/repetitions"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/repetitions" />

        <EditText
            android:id="@+id/edit_repetitions"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:hint="@string/repetitions_hint"
            android:inputType="number"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        android:weightSum="11">

        <TextView
            android:id="@+id/distance"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/distance" />

        <Spinner
            android:id="@+id/spinner_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/type"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/pace"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/pace" />

        <Spinner
            android:id="@+id/spinner_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/rest"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/rest" />

        <EditText
            android:id="@+id/edit_rest"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/rest_hint"
            android:inputType="number"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/additions"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/additions" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:orientation="vertical"
        android:rowCount="3"
        android:weightSum="10">

        <CheckBox
            android:id="@+id/legs"
            style="@style/text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:buttonTint="@color/accent"
            android:text="@string/legs" />

        <CheckBox
            android:id="@+id/kick"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:buttonTint="@color/accent"
            android:text="@string/kick_board" />

        <CheckBox
            android:id="@+id/fins"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:buttonTint="@color/accent"
            android:text="@string/fins" />

        <CheckBox
            android:id="@+id/arms"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:buttonTint="@color/accent"
            android:text="@string/arms" />

        <CheckBox
            android:id="@+id/buoy"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:buttonTint="@color/accent"
            android:text="@string/pull_buoy" />

        <CheckBox
            android:id="@+id/paddles"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:buttonTint="@color/accent"
            android:text="@string/paddles" />
    </GridLayout>

    <Button
        android:id="@+id/addButton"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/add" />

</LinearLayout>
