<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_popup_background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/styles"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strokes" />

        <Spinner
            android:id="@+id/spinner_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="11">

        <TextView
            android:id="@+id/distance"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/distance" />

        <Spinner
            android:id="@+id/spinner_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/time"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time" />

        <EditText
            android:id="@+id/editTime"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/edit_time_hint"
            android:inputType="time"
            android:textAlignment="center"
            android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/date"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <EditText
            android:id="@+id/editDate"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/edit_date_hint"
            android:inputType="date"
            android:textAlignment="center"
            android:focusable="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/save" />

</LinearLayout>
