<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_background"
        android:textAlignment="gravity" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pool" />

            <RadioButton
                android:id="@+id/shortPool"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/short_pool" />

            <RadioButton
                android:id="@+id/longPool"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/long_pool" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_style" />

            <Spinner
                android:id="@+id/spinner_styles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="11">

            <TextView
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/choose_distance" />

            <Spinner
                android:id="@+id/spinner_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8">

            </Spinner>
        </LinearLayout>

        <TextView
            android:id="@+id/timer"
            style="@style/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="00:00:00"
            android:textSize="60sp" />

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/start"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/custom_button"
                android:text="@string/start" />

            <Button
                android:id="@+id/stop"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:text="@string/stop"
                android:visibility="invisible" />

            <Button
                android:visibility="invisible"
                android:id="@+id/lap"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/start"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:text="@string/lap" />

            <Button
                android:id="@+id/reset"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/start"
                android:background="@drawable/custom_button"
                android:enabled="false"
                android:text="@string/reset"
                android:visibility="visible" />

        </RelativeLayout>

        <ListView
            android:id="@+id/timeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp">

        </ListView>
    </LinearLayout>

    <Button
        android:id="@+id/save"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/custom_button"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>