<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleWorkoutActivity">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_background"
        android:textAlignment="gravity" />

    <TextView
        android:textColor="@color/accent"
        android:id="@+id/date_field"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDate"
        style="@style/text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="false"
        android:hint="@string/edit_date_hint"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/date_field"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_field"
        app:layout_constraintStart_toStartOf="parent"
        android:fadingEdgeLength="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:layout_marginBottom="88dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:textColor="@color/accent"
                style="@style/basic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Warm_up" />

            <com.example.swimmaster.NonScrollListView
                android:id="@+id/list_view_warm_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:transitionName="anim"
                android:layout_marginBottom="16dp">

            </com.example.swimmaster.NonScrollListView>

            <TextView
                android:textColor="@color/accent"
                style="@style/basic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_set" />

            <com.example.swimmaster.NonScrollListView
                android:id="@+id/list_view_main_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:transitionName="anim"
                android:layout_marginBottom="16dp" >

            </com.example.swimmaster.NonScrollListView>

            <TextView
                android:textColor="@color/accent"
                style="@style/basic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cooldown" />

            <com.example.swimmaster.NonScrollListView
                android:id="@+id/list_view_cooldown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:transitionName="anim"
                android:layout_marginBottom="16dp" >

            </com.example.swimmaster.NonScrollListView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/log"
        style="@style/sign_up"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/custom_add_32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>